--- a/quiz/views/index.ejs
+++ b/quiz/views/index.ejs
@@ -7,5 +7,8 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <a href="/quizes/question">Participa</a>
+    <a href="/quizes/creditos">Creditos</a>
+
   </body>
 </html>
